syntax = "proto3";

package collaboration_service;
option go_package = "cs3219-project-ay2223s1-g33/proto";

enum VerifyRoomErrorCode {
  VERIFY_ROOM_ERROR_NONE = 0;
  VERIFY_ROOM_BAD_REQUEST = 1;
  VERIFY_ROOM_INTERNAL_ERROR = 2;
  VERIFY_ROOM_UNAUTHORIZED = 4;
}

message CollabTunnelRequest {
  bytes data = 1;
  int32 flags = 2;
}

message CollabTunnelResponse {
  bytes data = 1;
  int32 flags = 2;
}

service CollabTunnelService {
  rpc OpenStream(stream CollabTunnelRequest) returns (stream CollabTunnelResponse);
}
